// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`info command basic info test case 1`] = `
[
  {
    "data": {
      "command": [
        "test",
      ],
      "packageTasks": [
        {
          "command": [],
          "dependencies": [],
          "id": "__start",
          "package": "",
          "task": "__start",
          "workingDirectory": "",
        },
        {
          "command": [
            "yarn",
            "run",
            "test",
          ],
          "dependencies": [
            "a#build",
          ],
          "id": "a#test",
          "package": "a",
          "task": "test",
          "workingDirectory": "packages/a",
        },
        {
          "command": [
            "yarn",
            "run",
            "test",
          ],
          "dependencies": [
            "b#build",
          ],
          "id": "b#test",
          "package": "b",
          "task": "test",
          "workingDirectory": "packages/b",
        },
        {
          "command": [
            "yarn",
            "run",
            "build",
          ],
          "dependencies": [
            "b#build",
          ],
          "id": "a#build",
          "package": "a",
          "task": "build",
          "workingDirectory": "packages/a",
        },
        {
          "command": [
            "yarn",
            "run",
            "build",
          ],
          "dependencies": [
            "__start",
          ],
          "id": "b#build",
          "package": "b",
          "task": "build",
          "workingDirectory": "packages/b",
        },
      ],
      "scope": [
        "a",
        "b",
      ],
    },
    "level": 30,
    "msg": "info",
  },
]
`;

exports[`info command scoped info test case 1`] = `
[
  {
    "data": {
      "command": [
        "test",
      ],
      "packageTasks": [
        {
          "command": [],
          "dependencies": [],
          "id": "__start",
          "package": "",
          "task": "__start",
          "workingDirectory": "",
        },
        {
          "command": [
            "yarn",
            "run",
            "test",
          ],
          "dependencies": [
            "b#build",
          ],
          "id": "b#test",
          "package": "b",
          "task": "test",
          "workingDirectory": "packages/b",
        },
        {
          "command": [
            "yarn",
            "run",
            "build",
          ],
          "dependencies": [
            "__start",
          ],
          "id": "b#build",
          "package": "b",
          "task": "build",
          "workingDirectory": "packages/b",
        },
      ],
      "scope": [
        "b",
      ],
    },
    "level": 30,
    "msg": "info",
  },
]
`;
